Proyecto2/deploymentagronomia/deployment-agronomia.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agronomia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agronomia
  template:
    metadata:
      labels:
        app: agronomia
    spec:
      containers:
      - name: agronomia
        image: gcr.io/[YOUR_PROJECT_ID]/agronomia:v1
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: agronomia-service
spec:
  selector:
    app: agronomia
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
