Proyecto2/deploymentagronomia/service-agronomia.yaml
apiVersion: v1
kind: Service
metadata:
  name: agronomia-service
spec:
  selector:
    app: agronomia
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
