Proyecto2/deploymentagronomia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-api
spec:
  selector:
    app: go-api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
