Proyecto2/deploymentagronomia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /submitAgronomia
        pathType: Prefix
        backend:
          service:
            name: go-api-service
            port:
              number: 80
